	  inserted on the current line. (DLR)
  get_full_path()
	- Don't return NULL when the current directory doesn't exist, as
	  we can still recover from that. (DLR, found by Mike Frysinger)
	- Add various cleanups. (DLR)
- global.c:
  shortcut_init(), sc_init_one()
	- Don't include blank_after when DISABLE_HELP is defined, as
	  it's never used then. (DLR)
  toggle_init(), toggle_init_one()
	- Don't include desc or blank_after when DISABLE_HELP is
	  defined, as neither are ever used then. (DLR)
- help.c:
  do_help()
	- Simplify screen update handling and exiting. (DLR)
	- Don't allow moving down a page when the last line of the help
	  text is onscreen. (DLR)
- move.c:
  do_scroll_up(), do_scroll_down()
	- Fix problems where, after scrolling, the previous and current
	  lines would not be updated properly if the current line was
	  not the first or last line of the edit window. (DLR, found by
	  Mike Frysinger)
- nano.h:
	- Remove the manual disabling of color support if regex.h isn't
	  found, as configure.ac now handles that. (DLR)
- rcfile.c:
  parse_rcfile()
	- Add missing ENABLE_COLOR #ifdef around the second check for a
	  syntax with no color commands, to fix compilation with rcfile
	  support and without color support. (Daniel Richard G.)
- search.c:
  replace_regexp()
	- Remove unnecessary casting of c to int. (DLR)
- text.c:
  execute_command()
	- Remove the marking of the file as modified, as do_insertfile()
	  now handles that. (DLR)
- winio.c:
  parse_kbinput()
	- Properly handle combined meta and escape sequences, so that
	  e.g. Meta-/ will work properly when the / is on the numeric
	  keypad and NumLock is off.  Also, properly handle combined
	  control character and escape sequences, so that e.g. Esc Esc /
	  will work properly when the / is on the numeric keypad and
	  NumLock is off. (DLR)
	- Translate extended keypad keys to their ASCII equivalents even
	  when we hit Escape once or twice before typing them, for
	  consistency. (DLR)